[tool.poetry]
name = "llpm"
version = "0.1.1"
description = "适用于 LiteLoaderQQNT 的插件管理器"
authors = ["d0j1a_1701 <dajia1701@gmail.com>"]
license = "LGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llpm = 'llpm.shell:run'
